--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,22 +1,31 @@
 <nav id="sidebar-icon-links">
   {% if site.github.repo %}
     <a id="github-link"
-       class="icon" title="Github Project" aria-label="Github Project"
+       class="icon" title="Github Project" aria-label="Github Profile"
        href="{{ site.github.repo }}">
-      {% include svg/github.svg %}
+      {% include svg/github-with-circle.svg %}
     </a>
-    <a id="github-download-link"
-       class="icon" title="Download" aria-label="Download"
-       href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">
-      {% include svg/download.svg %}
+    <a id="facebook-link"
+       class="icon" title="facebook Project" aria-label="facebook Project"
+       href="{{ site.facebook.repo }}">
+      {% include svg/facebook-with-circle.svg %}
+    </a>
+    <a id="instagram-link"
+       class="icon" title="instagram Project" aria-label="instagram Project"
+       href="{{ site.instagram.repo }}">
+      {% include svg/instagram-with-circle.svg %}
+    </a>
+    <a id="linkedin-link"
+       class="icon" title="linkedin Project" aria-label="linkedin Project"
+       href="{{ site.linkedin.repo }}">
+      {% include svg/github-with-circle.svg %}
+    </a>
+    <a id="mail-link"
+       class="icon" title="mail Project" aria-label="mail Project"
+       href="{{ site.mail.repo }}">
+      {% include svg/mail-with-circle.svg %}
     </a>
   {% endif %}
-
-  <a id="subscribe-link"
-     class="icon" title="Subscribe" aria-label="Subscribe"
-     href="{{ site.baseurl }}/feed.xml">
-    {% include svg/feed.svg %}
-  </a>
 
   {% comment %}
     Check if we have tag or search pages page active before linking to it.
@@ -30,24 +39,6 @@
       {% assign search_page = node %}
     {% endif %}
   {% endfor %}
-
-  {% if tags_page %}
-    <a id="tags-link"
-       class="icon{% if page.url == '/tags' %} active{% endif %}"
-       title="Tags" aria-label="Tags"
-       href="{{ site.baseurl }}{{ tags_page.url }}">
-      {% include svg/tags.svg %}
-    </a>
-  {% endif %}
-
-  {% if search_page %}
-    <a id="search-link"
-       class="icon{% if page.url == '/search' %} active{% endif %}"
-       title="Search" aria-label="Tags"
-       href="{{ site.baseurl }}{{ search_page.url }}">
-      {% include svg/search.svg %}
-    </a>
-  {% endif %}
 
   {% include custom-icon-links.html %}
 </nav>
