--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -2,12 +2,12 @@
   {% if site.github.repo %}
     <a id="github-link"
        class="icon" title="Github Project" aria-label="Github Profile"
-       href="{{ site.github.repo }}">
+       href="{{ site.url }}">
       {% include svg/github-with-circle.svg %}
     </a>
     <a id="facebook-link"
        class="icon" title="facebook Project" aria-label="facebook Project"
-       href="{{ site.facebook.repo }}">
+       href="{{ site.facebook.url }}">
       {% include svg/facebook-with-circle.svg %}
     </a>
     <a id="instagram-link"
