--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -1,28 +1,28 @@
 <nav id="sidebar-icon-links">
   {% if site.github.repo %}
     <a id="github-link"
-       class="icon" title="Github Project" aria-label="Github Profile"
-       href="{{ site.url }}">
+       class="icon" title="Github" aria-label="Github Profile"
+       href="https://www.github.com/kunall17">
       {% include svg/github-with-circle.svg %}
     </a>
     <a id="facebook-link"
-       class="icon" title="facebook Project" aria-label="facebook Project"
-       href="{{ site.facebook.url }}">
+       class="icon" title="Facebook" aria-label="facebook Project"
+       href="https://www.facebook.com/kunall17">
       {% include svg/facebook-with-circle.svg %}
     </a>
     <a id="instagram-link"
-       class="icon" title="instagram Project" aria-label="instagram Project"
-       href="{{ site.instagram.repo }}">
+       class="icon" title="Instagram" aria-label="instagram Project"
+       href="https://www.instagram.com/kunall17">
       {% include svg/instagram-with-circle.svg %}
     </a>
     <a id="linkedin-link"
-       class="icon" title="linkedin Project" aria-label="linkedin Project"
-       href="{{ site.linkedin.repo }}">
+       class="icon" title="Linkedin" aria-label="linkedin Project"
+       href="https://www.linkedin.com/in/kunall17">
       {% include svg/github-with-circle.svg %}
     </a>
     <a id="mail-link"
-       class="icon" title="mail Project" aria-label="mail Project"
-       href="{{ site.mail.repo }}">
+       class="icon" title="Mail" aria-label="mail Project"
+       href="mailto:kunall.gupta17@gmail.com?subject=Just wanted to say hi">
       {% include svg/mail-with-circle.svg %}
     </a>
   {% endif %}
