Change resume link:

--- a/_includes/sidebar-nav-links.html
+++ b/_includes/sidebar-nav-links.html
@@ -2,7 +2,7 @@
   {% if site.sidebar_home_link %}
     <a class="home-link {% if page.url == '/' %} active{% endif %}"
         href="{{ site.baseurl }}/">About</a>
-    <a href="/assets/resume.pdf">Resume</a>
+    <a href="https://github.com/kunall17/kunall17.github.io/raw/master/assets/resume.pdf">Resume</a>
   {% endif %}
 
   {% comment %}
