--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -22,7 +22,7 @@
     </a>
     <a id="mail-link"
        class="icon" title="Mail" aria-label="mail Project"
-       href="mailto:kunall.gupta17@gmail.com?subject=Just wanted to say hi">
+       href="mailto:me@kunall17.com?subject=Just wanted to say hi">
       {% include svg/mail-with-circle.svg %}
     </a>
   {% endif %}
